# Glaukopis

./: .gitignore  Glaukopis-Innovation-Summary-05122026.md  LICENSE.txt  PROJECT_STATE.md  README.md
SFT/: README.md  (+5 more)
tmpl_gen/: README.md  install.sh  pyproject.toml
tmpl_gen/March-2026/: README.md  Sophia-CTI-Templates-04022026.docx
tmpl_gen/data_generation/: Readme.md  docx2json.sh  gencfg_default_neo4j.json  gencfg_per_primary_neo4j.json  make_dataset.sh  neo4j-local-config.json  tmpl2triples.sh  triples2alpaca.sh
tmpl_gen/docs/: CTI-DB-Schema-details.docx  IFT-Design.docx  cti-schema-target-2026-02.xlsx
tmpl_gen/schema-test/: README.md  create-test-tmpl.py  gencfg_default_neo4j.json  make-test-templates.sh  neo4j-local-config.json  test-CTI-schema.sh  test-templates+props.json  test-templates.json
tmpl_gen/scripts/: _probe_capec.py  _probe_q.py  _probe_q2.py  _probe_q3.py  check_corpus_licences.py  check_corpus_row_counts.py  check_seed_provenance.py  cm_generator.py  convert-templ.py  dedup_against_evals.py  gencfg_default_neo4j.json  iftgen.py  mcq_generator.py  mcq_shuffle_and_reformat.py  mini-parse.py  misp_taa_generator.py  neo4j-TEST-config.json  neo4j-config.json  neo4j-local-config.json  sample-tmpl-attack.json  schema-CTI-DB.gv  schema-CTI-DB.json  schemadiff.py  schemagraph.py  soc_generator.py  split_corpus_for_phases.py  stitch_long_context.py  stratified_shuffle.py  stratified_subsample.py  subsample_stratified.py  taa_actor_balance.py  taa_canon_generator.py  tmpl_docx2json.py  to_alpaca.py
tmpl_gen/templates-athena/: neo4j-TEST-config.json  (+3 more)
(+8488 files in other folders)
